--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/SkylineHR31/git-api-list#readme",
   "devDependencies": {
     "@babel/core": "^7.16.0",
+    "axios": "^0.24.0",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.5.0",
